export const snapshot = {};

snapshot[`ssr a TSX component 1`] = `
'<!doctype html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0"><title></title><script type="importmap">
{
  "imports": {
    "preact": "https://esm.sh/preact@10.26.2",
    "preact/hooks": "https://esm.sh/preact@10.26.2/hooks",
    "react": "https://esm.sh/preact@10.26.2",
    "react/jsx-runtime": "https://esm.sh/preact@10.26.2/jsx-runtime",
    "preact/jsx-runtime": "https://esm.sh/preact@10.26.2/jsx-runtime",
    "react-dom": "https://esm.sh/preact@10.26.2/compat/",
    "react-dom/*": "https://esm.sh/preact@10.26.2/compat/*",
    "htm/preact": "https://esm.sh/htm@3.1.1/preact?external=preact",
    "preact-iso": "https://esm.sh/preact-iso?external=preact",
    "preact-iso/prerender": "/fullsoak",
    "fullsoak/preact-iso": "https://esm.sh/preact-iso?external=preact",
    "@fullsoak/fullsoak/preact-iso": "https://esm.sh/preact-iso?external=preact",
    "fullsoak": "/fullsoak",
    "@fullsoak/fullsoak": "/fullsoak"
  }
}
</script><script type="text/javascript"></script><style></style></head><body><main id="fullsoak-htmlshell-main"><div>SimpleTsxComponent</div></main><script type="text/javascript">window.preloadedProps = {}</script><script type="module" src="/js/SimpleTsxComponent/mount.js"></script></body></html>'
`;

snapshot[`ssr a TSX component with props 1`] = `
'<!doctype html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0"><title></title><script type="importmap">
{
  "imports": {
    "preact": "https://esm.sh/preact@10.26.2",
    "preact/hooks": "https://esm.sh/preact@10.26.2/hooks",
    "react": "https://esm.sh/preact@10.26.2",
    "react/jsx-runtime": "https://esm.sh/preact@10.26.2/jsx-runtime",
    "preact/jsx-runtime": "https://esm.sh/preact@10.26.2/jsx-runtime",
    "react-dom": "https://esm.sh/preact@10.26.2/compat/",
    "react-dom/*": "https://esm.sh/preact@10.26.2/compat/*",
    "htm/preact": "https://esm.sh/htm@3.1.1/preact?external=preact",
    "preact-iso": "https://esm.sh/preact-iso?external=preact",
    "preact-iso/prerender": "/fullsoak",
    "fullsoak/preact-iso": "https://esm.sh/preact-iso?external=preact",
    "@fullsoak/fullsoak/preact-iso": "https://esm.sh/preact-iso?external=preact",
    "fullsoak": "/fullsoak",
    "@fullsoak/fullsoak": "/fullsoak"
  }
}
</script><script type="text/javascript"></script><style></style></head><body><main id="fullsoak-htmlshell-main"><div>SimpleTsxComponentWithProps=Alice</div></main><script type="text/javascript">window.preloadedProps = {"name":"Alice"}</script><script type="module" src="/js/SimpleTsxComponentWithProps/mount.js"></script></body></html>'
`;

snapshot[`ssr a VNode using HTM 1`] = `
'<!doctype html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0"><title></title><script type="importmap">
{
  "imports": {
    "preact": "https://esm.sh/preact@10.26.2",
    "preact/hooks": "https://esm.sh/preact@10.26.2/hooks",
    "react": "https://esm.sh/preact@10.26.2",
    "react/jsx-runtime": "https://esm.sh/preact@10.26.2/jsx-runtime",
    "preact/jsx-runtime": "https://esm.sh/preact@10.26.2/jsx-runtime",
    "react-dom": "https://esm.sh/preact@10.26.2/compat/",
    "react-dom/*": "https://esm.sh/preact@10.26.2/compat/*",
    "htm/preact": "https://esm.sh/htm@3.1.1/preact?external=preact",
    "preact-iso": "https://esm.sh/preact-iso?external=preact",
    "preact-iso/prerender": "/fullsoak",
    "fullsoak/preact-iso": "https://esm.sh/preact-iso?external=preact",
    "@fullsoak/fullsoak/preact-iso": "https://esm.sh/preact-iso?external=preact",
    "fullsoak": "/fullsoak",
    "@fullsoak/fullsoak": "/fullsoak"
  }
}
</script><script type="text/javascript"></script><style></style></head><body><main id="fullsoak-htmlshell-main"><div>SimpleTsxComponentWithProps=Bob</div></main><script type="text/javascript">window.preloadedProps = {"name":"Bob"}</script><script type="module" src="/js/SimpleTsxComponentWithProps/mount.js"></script></body></html>'
`;

snapshot[`ssr a StandardComponent 1`] = `
'<!doctype html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0"><title></title><script type="importmap">
{
  "imports": {
    "preact": "https://esm.sh/preact@10.26.2",
    "preact/hooks": "https://esm.sh/preact@10.26.2/hooks",
    "react": "https://esm.sh/preact@10.26.2",
    "react/jsx-runtime": "https://esm.sh/preact@10.26.2/jsx-runtime",
    "preact/jsx-runtime": "https://esm.sh/preact@10.26.2/jsx-runtime",
    "react-dom": "https://esm.sh/preact@10.26.2/compat/",
    "react-dom/*": "https://esm.sh/preact@10.26.2/compat/*",
    "htm/preact": "https://esm.sh/htm@3.1.1/preact?external=preact",
    "preact-iso": "https://esm.sh/preact-iso?external=preact",
    "preact-iso/prerender": "/fullsoak",
    "fullsoak/preact-iso": "https://esm.sh/preact-iso?external=preact",
    "@fullsoak/fullsoak/preact-iso": "https://esm.sh/preact-iso?external=preact",
    "fullsoak": "/fullsoak",
    "@fullsoak/fullsoak": "/fullsoak"
  }
}
</script><script type="text/javascript"></script><style>@import url(/components/Shared/styles.css);.foo{background-color:#55c456}</style></head><body><main id="fullsoak-htmlshell-main"><div>StandardComponent=Charlie</div></main><script type="text/javascript">window.preloadedProps = {"name":"Charlie"}</script><script type="module" src="/js/StandardComponent/mount.js"></script></body></html>'
`;
